--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
 h1 {
     margin-left: 20px;
     margin-top: 0;
-    padding-top: 30px;
+    padding-top: 25px;
     padding-right: 20px;
     color: white;
     height: 95px;
@@ -52,9 +52,9 @@ h1 {
 h2 {
     width: 300px;
     margin: 0px 0px auto 30px;
-    padding-top: 10px;
+    padding-top: 6px;
     padding-right: 20px;
-    color: rgb(207, 207, 207);
+    color: rgb(235, 235, 235);
     height: 95px;
     border-right: 3px outset orange
 }
@@ -74,6 +74,7 @@ colors {
     overflow: scroll;
     overflow-x: hidden;
     z-index: 1;
+    width: 100px;
 }
 
 colors::-webkit-scrollbar {
@@ -159,7 +160,7 @@ a {
 
 .color-bar {
     height: 20px;
-    width: 90px;
+    width: 100px;
     padding-left: 2px;
     border-bottom: 1px solid black;
 }
@@ -178,3 +179,35 @@ a {
     width: 30px;
     z-index: 0;   
 }
+
+.quarter-circle {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 250px;
+    left: 660px;
+    border: 1px solid black;
+    background-color: blue;
+}
+.quarter-circle:nth-of-type(1) {
+    border-top-left-radius: 100%;
+    transform: rotate(45deg);
+}
+.quarter-circle:nth-of-type(2) {
+    top: 285px;
+    left: 625px;
+    border-bottom-left-radius: 100%;
+    transform: rotate(45deg);
+}
+.quarter-circle:nth-of-type(3) {
+    border-top-right-radius: 100%;
+    transform: rotate(45deg);
+    top: 285px;
+    left: 695px;
+}
+.quarter-circle:nth-of-type(4) {
+    border-top-right-radius: 100%;
+    transform: rotate(135deg);
+    top: 320px;
+}
+
