--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-* {
 
+* {
     box-sizing: border-box;
+    font-family: 'Comic Neue', cursive;
 }
 body {
-    background-color: silver;
+    background-color: #FFBF00;
 }
 main {
     height: 602px;
@@ -23,7 +24,8 @@ main:active {
     height: 10px;
     width: 10px;
     background-color: white;
-    margin: 1px;
+    margin: 0px;
+    border-radius: 00%;
 }
 
 div:hover {
@@ -34,7 +36,7 @@ header {
     top: 0;
     height: 100px;
     width: 100%;
-    background-color: rgb(92, 92, 92);
+    background-color: salmon;
     border: 3px outset orange;
     display: flex;
 }
@@ -46,17 +48,18 @@ h1 {
     padding-right: 20px;
     color: white;
     height: 95px;
-    border-right: 3px outset orange;
+    border-right: 3px outset salmon;
 }
 
 h2 {
     width: 300px;
     margin: 0px 0px auto 30px;
-    padding-top: 6px;
+    padding-top: 13px;
     padding-right: 20px;
-    color: rgb(235, 235, 235);
+    color: white;
+    font-size: 20px;
     height: 95px;
-    border-right: 3px outset orange
+    border-right: 3px outset salmon
 }
 form {
     position: absolute;
@@ -88,7 +91,7 @@ colors::-webkit-scrollbar {
 button {
     position: absolute; 
     top: 150px;
-    left: 42.6%;
+    left: 724px;
     width: 50px;
     height: 20px;
     font-weight: bold;
@@ -126,7 +129,7 @@ button {
     }
     button {
         top: 165px;
-        left: 85.2%
+        left: 723px;
     }
 }
 
@@ -185,7 +188,7 @@ a {
     height: 50px;
     position: absolute;
     top: 250px;
-    left: 660px;
+    left: 690px;
     border: 1px solid black;
     background-color: blue;
 }
@@ -195,7 +198,7 @@ a {
 }
 .quarter-circle:nth-of-type(2) {
     top: 285px;
-    left: 625px;
+    left: 655px;
     border-bottom-left-radius: 100%;
     transform: rotate(45deg);
 }
@@ -203,7 +206,7 @@ a {
     border-top-right-radius: 100%;
     transform: rotate(45deg);
     top: 285px;
-    left: 695px;
+    left: 725px;
 }
 .quarter-circle:nth-of-type(4) {
     border-top-right-radius: 100%;
@@ -215,4 +218,10 @@ a {
     position: absolute;
     top: 200px;
     left: 620px;
+}
+
+#pause {
+    position: absolute;
+    top: 200px;
+    left: 700px;
 }
